# local-llm-apps

./: README.md  pyproject.toml
chat/: .env.example  README.md  chat-with-arxiv.py  chat-with-github.py  chat-with-pdf.py  chat-with-substack.py  chat-with-youtube.py  pyproject.toml
chat/chat-with-pdf/: README.md  main.py  pyproject.toml
chat/chat-with-youtube/: README.md  pyproject.toml
chat/lib/: llm_config.py
config/: llm_config.py
evaluation/: evaluate_rag.py
helpers/: helper_function.py
light-rag-app/: README.md  pyproject.toml
pdf-rag-app/: README.md  constant.py
rag-collection-basic/chat/: chat-with-pdf.py  simple-chat-stream.py
rag-collection-basic/chat/lib/: llm_config.py
rag-collection-basic/light-rag-app/: .gitignore  main.py
rag-collection-basic/pdf-rag-app/: .gitignore  get_embedding_function.py  main.py  populate_database.py  pyproject.toml
rag-collection-scripts/: simple_rag.py
