[project]
name = "local-llm-apps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chroma>=0.2.0",
    "deepeval>=3.6.6",
    "fitz>=0.0.1.dev2",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.78",
    "langchain-ollama>=0.3.10",
    "langchain-openai>=0.3.35",
    "numpy>=2.3.3",
    "ollama>=0.6.0",
    "openai>=2.2.0",
    "pymupdf>=1.26.4",
    "pypdf>=6.1.1",
    "rank-bm25>=0.2.2",
]
